feat: enhance JWT handling by introducing JwtUserData and updating user role retrieval